--- a/lang/en_EN.json
+++ b/lang/en_EN.json
@@ -1,22 +1,20 @@
 {
-  "START": "Extractor of config server / workstation ",
-    "SYSTEM": {
-        "parameter":"Parameter",
-        "option": "Option",
-        "valide": "valider",
-        "applicate": "Applicate",
-        "delete": "Delete",
-        "detected": "Detected",
-        "about": "About",
-        "language": "Language",
-        "exit":"Exit"
-    },
+  "START": "Extracteur de config serveur / workstation ",
+  "BASE": {
+      "valide": "valider",
+      "delete": "suprimmer",
+      "detected": "detecter"
+  },
+  "INPUT": {
+      "choise_benchmarck": "utiliser le Benchmarck par défault y/n: ",
+      "enter_number" : "Entre le numéro: ",
+      "restart_script": "Voulez-vous relancer le script"
+  },
   "ERROR": {
-        "no_charge_sytem": "votre system  {} {} n'est pas pris en charge, contacter un des développeurs !",
-        "no_benchmarck_system" : "Nous avons pas de CIS Benchmarck pour votre system {} {} ❌"
-    },
-    "INPUT": {
-        "choise_benchmarck": "Use Benchmarck is default y/n: ",
-        "enter_number" : "Enter the number: "
-    }
+      "no_charge_sytem": "votre system  {} {} n'est pas pris en charge, contacter un des développeurs !",
+      "no_benchmarck_system" : "Nous avons pas de CIS Benchmarck pour votre system {} {} ❌"
+  },
+  "INDEX": {
+      "SYSTEM": "system"
+  }
 }
